--- a/src/app/toolbar/dashboard/dbToolbar.html
+++ b/src/app/toolbar/dashboard/dbToolbar.html
@@ -30,24 +30,20 @@
                             <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"
                                data-hover="dropdown" data-close-others="true">HELP</a>
                             <ul class="dropdown-menu ">
-                                <li >
-                                    <a  style="height: 50px;line-height: 50px;width: 100%;text-align: left;font-size: 15px" >
-                                        <i class="icon-user"></i> My Help </a>
-                                </li>
                                 <li>
-                                    <a  style="height: 50px;line-height: 50px;width: 100%;text-align: left;font-size: 15px" >
+                                    <a ui-sref="customerCare" style="height: 50px;line-height: 50px;width: 100%;text-align: left;font-size: 15px" >
                                         <i class="icon-lock"></i>Customer Care </a>
                                 </li>
                                 <li>
-                                    <a  style="height: 50px;line-height: 50px;width: 100%;text-align: left;font-size: 15px" >
+                                    <a ui-sref="contactUs" style="height: 50px;line-height: 50px;width: 100%;text-align: left;font-size: 15px" >
                                         <i class="icon-lock"></i>Contact Us</a>
                                 </li>
                                 <li>
-                                    <a  style="height: 50px;line-height: 50px;width: 100%;text-align: left;font-size: 15px" >
+                                    <a ui-sref="feedback" style="height: 50px;line-height: 50px;width: 100%;text-align: left;font-size: 15px" >
                                         <i class="icon-lock"></i>Feedback</a>
                                 </li>
                                 <li>
-                                    <a  style="height: 50px;line-height: 50px;width: 100%;text-align: left;font-size: 15px" >
+                                    <a ui-sref="businessEnquires" style="height: 50px;line-height: 50px;width: 100%;text-align: left;font-size: 15px" >
                                         <i class="icon-key"></i>Business Enquires</a>
                                 </li>
                             </ul>
