--- a/src/app/main/help/contactUs/contactUs.html
+++ b/src/app/main/help/contactUs/contactUs.html
@@ -6,17 +6,6 @@
                     <i class="icon-social-dribbble font-purple-soft"></i>
                     <span class="caption-subject font-purple-soft bold uppercase">Contact Us</span>
                 </div>
-                <!--<div class="actions">-->
-                <!--<a class="btn btn-circle btn-icon-only btn-default" href="javascript:;">-->
-                <!--<i class="icon-cloud-upload"></i>-->
-                <!--</a>-->
-                <!--<a class="btn btn-circle btn-icon-only btn-default" href="javascript:;">-->
-                <!--<i class="icon-wrench"></i>-->
-                <!--</a>-->
-                <!--<a class="btn btn-circle btn-icon-only btn-default" href="javascript:;">-->
-                <!--<i class="icon-trash"></i>-->
-                <!--</a>-->
-                <!--</div>-->
             </div>
             <div class="portlet-body">
                 <ul class="nav nav-tabs">
@@ -35,21 +24,16 @@
                             <div class="col-md-4">
                                 <div style="font-size: 20px;color:grey">India : 9876543212</div>
                                 <div style="font-size: 15px;color:gainsboro">(10am - 7pm)Available only in india</div>
-
                             </div>
                             <div class="col-md-4">
                                 <div style="font-size: 20px;color:grey">Need instant help?</div>
                                 <div style="font-size: 15px"><a style="color: skyblue">24 x 7 Live Chat</a></div>
-
                             </div>
-
                         </div>
-
-
                     </div>
                 </div>
                 <div class="clearfix margin-bottom-20"></div>
-
             </div>
         </div>
+    </div>
     </div>
