--- a/src/app/navigation/dashboard/dbNavigation.html
+++ b/src/app/navigation/dashboard/dbNavigation.html
@@ -141,7 +141,7 @@
                                         <div class="col-md-12">
                                             <div class="row">
                                                 <div class="col-md-10 col-sm-10 col-xs-10">
-                                                    <span class="title">A Waiting Reply</span>
+                                                    <span class="title">Awaiting Reply</span>
                                                 </div>
                                                 <!--<div class="col-md-1 col-sm-1 col-xs-1">
                                                     <span class="">0</span>
@@ -173,7 +173,7 @@
                                         <div class="col-md-12">
                                             <div class="row">
                                                 <div class="col-md-10 col-sm-10 col-xs-10">
-                                                    <span class="title important-options">Viewd profiles</span>
+                                                    <span class="title important-options">Viewed profiles</span>
                                                 </div>
                                                 <!--<div class="col-md-1 col-sm-1 col-xs-1">
                                                     <span class="">0</span>
@@ -200,7 +200,7 @@
                                 <!--</a>-->
                             <!--</li>-->
                             <li ng-class="{ active: isActive('/app/decline')}" class="nav-item" >
-                                <a ui-sref="app.decline" class="nav-link ">
+                                <a ui-sref="messages.declined" class="nav-link ">
                                     <div class="row">
                                         <div class="col-md-12">
                                             <div class="row">
