--- a/src/app/main/dashboard/dashboard.html
+++ b/src/app/main/dashboard/dashboard.html
@@ -199,7 +199,7 @@
                                         <div class="row ">
                                             <div class="col-md-12">
                                                 <div style="margin-top:20px"><a
-                                                        style="font-size:13px;color: red;margin-right: 20px"> Send
+                                                        style="font-size:13px;color: red;margin-right: 20px" ng-click="sendInterest(item.id_people)"> Send
                                                     Interest</a><a ng-click="viewProfile(item.id_people)"  style="font-size:13px;color: red"> View Profile</a>
                                                 </div>
 
@@ -330,7 +330,7 @@
                                         <div class="row ">
                                             <div class="col-md-12">
                                                 <div style="margin-top:20px"><a
-                                                        style="font-size:13px;color: red;margin-right: 20px"> Send
+                                                        style="font-size:13px;color: red;margin-right: 20px" ng-click="sendInterest(item.id_people)"> Send
                                                     Interest</a><a ng-click="viewProfile(item.id_people)"  style="font-size:13px;color: red"> View Profile</a>
                                                 </div>
 
