--- a/src/app/main/managephotos/managephoto.html
+++ b/src/app/main/managephotos/managephoto.html
@@ -101,7 +101,7 @@
                                             <div class="row">
                                                 <div class="col-md-12" style="height: 50px;width:100%;line-height:50px;
                       font-size: 20px;font-weight: bold;color: #0086B3"><span
-                                                        ng-click="backtomain()"> {{groupName}}</span></div>
+                                                        ng-click="backtomain()">< {{groupName}} ({{imageLength}})</span></div>
 
                                             </div>
 
@@ -207,16 +207,18 @@
                             <div class="portlet-body ">
 
                             <div class="row" style="padding: 30px">
-                                <div class="col-sm-3" ng-click="group('general')" style="background-color: gainsboro">
+                                <div class="col-sm-3" ng-click="group('general')" >
 
 
                                     <div class="thumbnail" style="background-color: gainsboro">
 
-                                        <div style="height: 150px;width: 100%;line-height: 140px;text-align:center">
-                                            <b>General </b>
+                                        <div style="height: 150px;width: 100%;line-height: 140px;text-align:center;background-color: gainsboro">
+                                            <!--<b>General ({{imageLength}}) </b>-->
                                         </div>
 
                                     </div>
+                                    <b>General ({{imageLength}}) </b>
+
                                 </div>
                                 <!--<div class="col-sm-3" ng-click="group('family')">-->
 
