--- a/src/app/main/view-profile/viewProfile.html
+++ b/src/app/main/view-profile/viewProfile.html
@@ -738,3 +738,23 @@
                 </span>
         <!-- END CONTENT BODY -->
     </div>
+
+
+        <script type="text/ng-template" id="myModalContent.html">
+            <div class="modal-header">
+                <h3 class="modal-title" id="modal-title" style="color: #4cbcac;font-weight: bold">{{$ctrl.items.header}}</h3>
+            </div>
+            <!--<div class="modal-body" id="modal-body">-->
+                <!--{{$ctrl.items.id}},{{$ctrl.items.field}}-->
+                <!--&lt;!&ndash;<ul>&ndash;&gt;-->
+                    <!--&lt;!&ndash;<li ng-repeat="item in $ctrl.items">&ndash;&gt;-->
+                        <!--&lt;!&ndash;<a href="#" ng-click="$event.preventDefault(); $ctrl.selected.item = item">{{ item }}</a>&ndash;&gt;-->
+                    <!--&lt;!&ndash;</li>&ndash;&gt;-->
+                <!--&lt;!&ndash;</ul>&ndash;&gt;-->
+                <!--&lt;!&ndash;Selected: <b>{{ $ctrl.selected.item }}</b>&ndash;&gt;-->
+            <!--</div>-->
+            <div class="modal-footer">
+                <!--<button class="btn btn-primary" type="button" ng-click="$ctrl.ok()">OK</button>-->
+                <button class="btn btn-warning" type="button" ng-click="$ctrl.cancel()">OK</button>
+            </div>
+        </script>
