--- a/src/app/main/dashboard/dashboard.html
+++ b/src/app/main/dashboard/dashboard.html
@@ -357,3 +357,18 @@
         </div>
         <!-- END CONTENT BODY -->
     </div>
+
+
+    <script type="text/ng-template" id="myModalContent.html">
+        <div class="modal-header">
+            <h3 class="modal-title" id="modal-title" style="color: #4cbcac;font-weight: bold">
+                {{$ctrl.items}}</h3>
+        </div>
+        <!--<div class="modal-body" id="modal-body">-->
+        <!--{{$ctrl.items.id}},{{$ctrl.items.field}}-->
+        <!--</div>-->
+        <div class="modal-footer">
+            <!--<button class="btn btn-primary" type="button" ng-click="$ctrl.ok()">OK</button>-->
+            <button class="btn btn-warning" type="button" ng-click="$ctrl.cancel()">OK</button>
+        </div>
+    </script>
