--- a/src/app/main/managephotos/managephoto.html
+++ b/src/app/main/managephotos/managephoto.html
@@ -85,7 +85,7 @@
 
                             <div class="portlet-body form  form-horizontal">
                                 <div class="row" style="text-align: center;font-size: 21px;margin:20px">
-                                    <span class="  bold "> You have added 11 photos. Add more to get better responses</span>
+                                    <span class="  bold "> You have added {{imageLength}} photos. Add more to get better responses</span>
 
                                 </div>
                                                           </div>
@@ -101,7 +101,7 @@
                                             <div class="row">
                                                 <div class="col-md-12" style="height: 50px;width:100%;line-height:50px;
                       font-size: 20px;font-weight: bold;color: #0086B3"><span
-                                                        ng-click="backtomain()">< {{groupName}} ({{imageLength}})</span></div>
+                                                        ng-click="backtomain()"> {{groupName}} ({{imageLength}})</span></div>
 
                                             </div>
 
