--- a/src/app/main/message/awaitingReply/awaiting.html
+++ b/src/app/main/message/awaitingReply/awaiting.html
@@ -97,11 +97,24 @@
 
                         </div>
                         <hr>
-                        <div class="row">
+                        <div class="row" ng-if="item.action == 'connect'">
                             <div class="col-md-12 notification-style uppercase">INTEREST SENT</div>
 
                             <div class="col-md-12 notification-details">{{item.content}}</div>
+
                         </div>
+                        <hr>
+
+                        <span ng-repeat="obj in item.communication.sent">
+                        <div class="row" >
+                            <div class="col-md-12 notification-style uppercase">REQUEST SENT</div>
+
+                            <div class="col-md-12 notification-details">{{obj.content}}</div>
+
+                        </div>
+                                                        <hr>
+
+                            </span>
                         <div class="row margin-top-10">
                             <div class="col-md-12">
                                 <button type="button" class=" uppercase btn red input-rounded" ng-click="">
