--- a/src/app/main/search/searchbyid/searchById.html
+++ b/src/app/main/search/searchbyid/searchById.html
@@ -1,6 +1,6 @@
 <div class="page-content-wrapper">
     <!-- BEGIN CONTENT BODY -->
-    <div class="page-content" style="margin-left: 0px!important;">
+    <div class="page-content" style="margin-left: 0px!important;min-height: 0px!important;">
         <!-- BEGIN PAGE HEAD-->
         <div class="page-head">
 
