--- a/src/app/main/dashboard/dashboard.html
+++ b/src/app/main/dashboard/dashboard.html
@@ -294,7 +294,7 @@
                                     <div class="row">
                                         <div class="col-md-12 page-action-navigation">
 
-                                            <span class="paginate-message"> View all (<span style="color:black"> {{recentUpdated.matches.length}} </span>)</span>
+                                            <span class="paginate-message"> View all (<span style="color:black"> {{viewed.matches.length}} </span>)</span>
 
                                         </div>
                                     </div>
