--- a/src/app/main/help/contactUs/contactUs.html
+++ b/src/app/main/help/contactUs/contactUs.html
@@ -22,8 +22,11 @@
                                 <div style="font-size: 15px;"><a style="color: skyblue">Write a Customer Care</a></div>
                             </div>
                             <div class="col-md-4">
-                                <div style="font-size: 20px;color:grey">India : 9876543212</div>
-                                <div style="font-size: 15px;color:gainsboro">(10am - 7pm)Available only in india</div>
+                                <div style="font-size: 20px;color:grey">Address</div>
+                                <div style="font-size: 15px;color:deepskyblue">H-95 Housing board Phase II</div>
+                                <div style="font-size: 15px;color:deepskyblue"> Krishnagiri 635001</div>
+                                <div style="font-size: 15px;color:deepskyblue"> Telephone : 9999999999</div>
+                                <div style="font-size: 15px;color:deepskyblue"> Email : help.peoplematrimony@gmail.com</div>
                             </div>
                             <div class="col-md-4">
                                 <div style="font-size: 20px;color:grey">Need instant help?</div>
