--- a/src/app/main/view-profile/viewProfile.html
+++ b/src/app/main/view-profile/viewProfile.html
@@ -17,7 +17,7 @@
                             <div class="portlet-title">
 
                                 <div class="caption ">
-                                    <span class="vp-main"><span style="text-transform: capitalize">{{view.name}}</span> ({{view.id_people}})</span>
+                                    <span class="vp-main"><span style="text-transform: capitalize">{{view.name}}</span> <span style="font-weight: 200">({{view.id_people}})</span></span>
                                     <span ng-if="view.isOnline = 'online'"><i class="fa fa-circle "
                                                                               style="color:#56bb55 ;padding-top:5px;"></i>&nbsp;<label>Online</label>
                                 </span>
