--- a/src/app/navigation/dashboard/dbNavigation.html
+++ b/src/app/navigation/dashboard/dbNavigation.html
@@ -216,8 +216,8 @@
                                 </a>
                             </li>
 
-                            <li ng-class="{ active: isActive('/app/pending')}" class="nav-item" >
-                                <a ui-sref="app.pending" class="nav-link ">
+                            <li  class="nav-item" >
+                                <a ui-sref="blocked" class="nav-link ">
                                     <div class="row">
                                         <div class="col-md-12">
                                             <div class="row">
