--- a/src/app/main/help/feedback/feedback.html
+++ b/src/app/main/help/feedback/feedback.html
@@ -43,7 +43,7 @@
                         <label class="font-weight ">Matrimony Id</label>
 
                         <input type="text" class="form-control  input-rounded"
-                               ng-model="business.email">
+                               ng-model="business.id">
 
 
                     </div>
