--- a/src/app/main/view-profile/viewProfile.html
+++ b/src/app/main/view-profile/viewProfile.html
@@ -90,7 +90,7 @@
                                                     <td class="third-row"><span
                                                             ng-if="view.mothertongue != null && view.mothertongue != ''">{{view.mothertongue}}</span>
                                                         <span
-                                                            ng-if="view.mothertongue == null || view.mothertongue != ''">Not Specified</span>
+                                                            ng-if="view.mothertongue == null || view.mothertongue == ''">Not Specified</span>
                                                     </td>
                                                 </tr>
                                                 <tr>
