--- a/src/app/toolbar/search/searchtoolbar.html
+++ b/src/app/toolbar/search/searchtoolbar.html
@@ -24,7 +24,7 @@
 						<li style="background-color: #00c29e"><a ui-sref="search">SEARCH</a></li>
 						<li><a href="#about">DAILY MATCHES</a></li>
 						<li><a ui-sref="messages">MESSAGES</a></li>
-						<li><a ui-sref="#">HELP</a></li>
+						<!--<li><a ui-sref="#">HELP</a></li>-->
 					</ul>
 				</div>
 
