--- a/src/app/directive/image-scroll/image-scroll.html
+++ b/src/app/directive/image-scroll/image-scroll.html
@@ -19,8 +19,8 @@
     padding: 5px;
     height:auto;
     width: 180px"
-         ng-show="indexValue == $index"
-        />
+         ng-show="indexValue == $index" ng-click='reverse1()'
+            />
 
 </div>
 <div style="width: 100%;" ng-if="size > 1">
@@ -33,5 +33,6 @@
        <i class="glyphicon glyphicon-circle-arrow-right"></i>
     </a>
         </span>
+</div>
 </div>
 
