--- a/src/app/main/view-profile/viewProfile.html
+++ b/src/app/main/view-profile/viewProfile.html
@@ -985,6 +985,15 @@
                                 </div>
                             </div>
                 </span>
+            <div class="row">
+            <div class="col-md-12">
+            <div class="col-md-12" style="margin-bottom: 20px">
+                <a style="color: indianred;font-size: 15px" ng-click="print()">Print</a>
+
+            </div>
+            </div>
+            </div>
+
             <!-- END CONTENT BODY -->
         </div>
 
