--- a/src/app/main/recomendation/recomendation.css
+++ b/src/app/main/recomendation/recomendation.css
@@ -125,11 +125,32 @@
 }
 .recomended-image{
     border-radius: 50% !important;
-    max-width: 100px !important;
-    min-height: 100px !important;
-    height: 100px !important;
-    width: 100px !important;
+    max-width: 70px !important;
+    min-height: 70px !important;
+    height: 70px !important;
+    width: 70px !important;
 }
 .percent-match{
     visibility: hidden !important;
+}
+
+
+.m_wrap{
+    width:100%;
+    height:130px;
+}
+.dx{
+    width:100%;
+    height:130px;
+    overflow-x:scroll;
+    white-space: nowrap;
+}
+.xc{
+    display:inline-block;
+    width:150px;
+    height:100px;
+    /*border:1px solid;*/
+    /*line-height:80px;*/
+    text-align:center;
+    margin-bottom:4px;
 }
