--- a/src/app/main/recomendation/recomendationTop.html
+++ b/src/app/main/recomendation/recomendationTop.html
@@ -1,3 +1,5 @@
+<span ng-if="dailyMatches.matches.length > 0">
+
 <div class="portlet light border-rounded">
     <div class="portlet-body">
         <div class="row">
@@ -36,5 +38,5 @@
 </div>
 
 
-
+</span>
 
