--- a/src/app/main/recomendation/recomendation.html
+++ b/src/app/main/recomendation/recomendation.html
@@ -665,6 +665,6 @@
 
 <div  ng-if="dailyMatches.matches.length == 0" class="portlet light  border-rounded ">
     <div class="alert alert-success">
-        No results found
+        No Mactches found
     </div>
 </div>
