--- a/src/app/navigation/dashboard-right/dashBoardRight.html
+++ b/src/app/navigation/dashboard-right/dashBoardRight.html
@@ -143,10 +143,10 @@
                                                         <div class="row " ng-repeat="occu in discover.education.matches | limitTo:2">
                                                             <div class=" col-xs-3 col-sm-3 col-md-4 ">
                                                                 <img ng-if="occu.images.length > 0" class="imgae-circle spacer"
-                                                                     ng-src="{{occu.images[0]}}"/>
-                                                                <img ng-if="occu.gender == 'male'" class="imgae-circle spacer"
+                                                                     ng-src="{{occu.images[0].image}}"/>
+                                                                <img ng-if="occu.gender == 'male' && occu.images.length == 0" class="imgae-circle spacer"
                                                                      ng-src="/assets/defaultImages/male_card.jpg"/>
-                                                                <img ng-if="occu.gender == 'female'" class="imgae-circle spacer"
+                                                                <img ng-if="occu.gender == 'female' && occu.images.length == 0" class="imgae-circle spacer"
                                                                      ng-src="/assets/defaultImages/female_card.jpg"/>
                                                             </div>
                                                             <div class="col-md-1 hidden-xs hidden-sm"></div>
@@ -202,10 +202,10 @@
                                                         <div class="row " ng-repeat="occu in discover.star.matches | limitTo:2">
                                                             <div class=" col-xs-3 col-sm-3 col-md-4 ">
                                                                 <img ng-if="occu.images.length > 0" class="imgae-circle spacer"
-                                                                     ng-src="{{occu.images[0]}}"/>
-                                                                <img ng-if="occu.gender == 'male'" class="imgae-circle spacer"
+                                                                     ng-src="{{occu.images[0].image}}"/>
+                                                                <img ng-if="occu.gender == 'male' && occu.images.length == 0" class="imgae-circle spacer"
                                                                      ng-src="/assets/defaultImages/male_card.jpg"/>
-                                                                <img ng-if="occu.gender == 'female'" class="imgae-circle spacer"
+                                                                <img ng-if="occu.gender == 'female' && occu.images.length == 0" class="imgae-circle spacer"
                                                                      ng-src="/assets/defaultImages/female_card.jpg"/>
                                                             </div>
                                                             <div class="col-md-1 hidden-xs hidden-sm"></div>
@@ -259,10 +259,10 @@
                                                         <div class="row " ng-repeat="occu in discover.family_values.matches | limitTo:2">
                                                             <div class=" col-xs-3 col-sm-3 col-md-4 ">
                                                                 <img ng-if="occu.images.length > 0" class="imgae-circle spacer"
-                                                                     ng-src="{{occu.images[0]}}"/>
-                                                                <img ng-if="occu.gender == 'male'" class="imgae-circle spacer"
+                                                                     ng-src="{{occu.images[0].image}}"/>
+                                                                <img ng-if="occu.gender == 'male' && occu.images.length == 0" class="imgae-circle spacer"
                                                                      ng-src="/assets/defaultImages/male_card.jpg"/>
-                                                                <img ng-if="occu.gender == 'female'" class="imgae-circle spacer"
+                                                                <img ng-if="occu.gender == 'female' && occu.images.length == 0" class="imgae-circle spacer"
                                                                      ng-src="/assets/defaultImages/female_card.jpg"/>
                                                             </div>
                                                             <div class="col-md-1 hidden-xs hidden-sm"></div>
