--- a/src/app/footer/footer.html
+++ b/src/app/footer/footer.html
@@ -41,7 +41,7 @@
                                         <h4 class="heading"> About us</h4>
                                     </div>
                                     <div class="col-md-12">
-                                        <span class="description"> 24X7 Live help | Contact Us | Feedback | FAQ </span>
+                                        <span class="description"> <a ui-sref="customerCare">24X7 Live help</a> | <a ui-sref="contactUs">Contact Us</a> | <a ui-sref="feedback">Feedback</a> |<a ui-sref="businessEnquires">FAQ</a> </span>
                                     </div>
                                 </div>
                             </div>
