--- a/src/app/main/matches/matches.html
+++ b/src/app/main/matches/matches.html
@@ -214,7 +214,7 @@
 <script type="text/ng-template" id="enlargeMatchesPhoto.html">
     <div class="modal-header">
         <h4 class="modal-title" id="enlarge" style="color: #4cbcac;font-weight: bold">
-            {{$ctrl.items.header}}</h4>
+            Profile Photos</h4>
     </div>
     <div class="modal-body" id="modal-body" style="text-align: center">
         <div class="row">
