--- a/src/app/main/searchresults/searchresults.html
+++ b/src/app/main/searchresults/searchresults.html
@@ -216,14 +216,18 @@
     </div>
     <div class="modal-body" id="modal-body" style="text-align: center">
         <div class="row">
-        <img  style="height: 250px;width:auto"
+        <img  class="modal-img"
               ng-src="{{$ctrl.selectedImg}}"/>
         </div>
         <div class="row" style="margin-top: 20px;" >
-        <div class="col-md-2" ng-repeat="img in $ctrl.items">
-            <img  style="height: 50px;width:auto"
+            <span ng-repeat="img in $ctrl.items">
+        <div class="col-md-1 col-xs-1 "  >
+            <img  style="    height: 40px;
+    width: 40px;
+    border-radius: 25% !important;"
                   ng-src="{{img.image}}" ng-click="$ctrl.vieImg(img.image)"/>
         </div>
+                </span>
             </div>
     </div>
     <div class="modal-footer">
