--- a/src/app/main/searchresults/searchresults.html
+++ b/src/app/main/searchresults/searchresults.html
@@ -222,9 +222,7 @@
         <div class="row" style="margin-top: 20px;" >
             <span ng-repeat="img in $ctrl.items">
         <div class="col-md-1 col-xs-1 "  >
-            <img  style="    height: 40px;
-    width: 40px;
-    border-radius: 25% !important;"
+            <img  style="height: 40px;width: 40px;border-radius: 25% !important;"
                   ng-src="{{img.image}}" ng-click="$ctrl.vieImg(img.image)"/>
         </div>
                 </span>
